// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <GifExpertApp/> Deberia de hacer match con el snapshot 1`] = `
<Fragment>
  <h2>
    Segundo Componente React
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en el <GifExpertApp/> Deberia de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Segundo Componente React
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Piece"
      key="One Piece"
    />
    <GifGrid
      category="Jujutsu kaizen"
      key="Jujutsu kaizen"
    />
  </ol>
</Fragment>
`;
